bk_ida/gccida/c1/reload_reg_free_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reload_reg_free_p/src/reload1.c:4835:56: error: must use 'enum' tag to refer to type 'reload_type'
int  reload_reg_free_p( unsigned int regno, int opnum, reload_type type) 
                                                       ^
                                                       enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reload_reg_free_p/src/reload1.c:5077:15: error: use of undeclared identifier 'off_6CC868'
fancy_abort( &off_6CC868[4], 4527, "reload_reg_free_p"); 
              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reload_reg_free_p/src/obj/reload1.o] Error 1
